Renamed "cleaned_games.csv" into "games_cleaned.csv" Minor changes to RDF Creator notebook

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 108,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 109,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -60,7 +60,8 @@
     "    os.mkdir(rdfPath)\n",
     "\n",
     "# Setup datasets paths\n",
-    "gamesPath = os.path.join(datasetsPath, \"cleaned_games.csv\")\n",
+    "gamesPath = os.path.join(datasetsPath, \"games_cleaned.csv\")\n",
+    "vgchartzPath = os.path.join(datasetsPath, \"vgchartz_cleaned.csv\")\n",
     "\n",
     "# Countries-Regions path\n",
     "countriesRegionsPath = os.path.join(datasetsPath, \"countries-regions.csv\")\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 110,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 111,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 112,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -144,11 +145,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 113,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
-    "games = pd.read_csv(gamesPath, sep=\",\", index_col=\"title\")"
+    "games = pd.read_csv(gamesPath, sep=\",\", index_col=\"title\")\n",
+    "vgchartzPath = pd.read_csv(gamesPath, sep=\",\", index_col=\"title\")"
    ],
    "metadata": {
     "collapsed": false
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 114,
    "outputs": [],
    "source": [
     "def createGameID(title):\n",
@@ -165,9 +167,9 @@
     "    for char in title:\n",
     "        if char.isalnum():\n",
     "            gameID += char\n",
-    "        elif len(gameID)>0 and gameID[-1]!='-':\n",
+    "        elif len(gameID) > 0 and gameID[-1] != '-':\n",
     "            gameID += '-'\n",
-    "    if len(gameID)>0 and gameID[-1]=='-':\n",
+    "    if len(gameID) > 0 and gameID[-1] == '-':\n",
     "        gameID = gameID[:-1]\n",
     "    #print(gameID.lower())\n",
     "    return gameID.lower()"
@@ -178,10 +180,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "outputs": [],
+   "execution_count": 115,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 35922 entries, 688(I) Hunter/Killer to Yooka-Laylee and the Impossible Lair\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Unnamed: 0        35922 non-null  int64  \n",
+      " 1   id                35922 non-null  int64  \n",
+      " 2   main_story        17324 non-null  float64\n",
+      " 3   main_plus_extras  11631 non-null  float64\n",
+      " 4   completionist     13107 non-null  float64\n",
+      " 5   all_styles        21112 non-null  float64\n",
+      " 6   coop              183 non-null    float64\n",
+      " 7   versus            274 non-null    float64\n",
+      " 8   type              1314 non-null   object \n",
+      " 9   developers        34080 non-null  object \n",
+      " 10  publishers        32754 non-null  object \n",
+      " 11  platforms         24285 non-null  object \n",
+      " 12  genres            32843 non-null  object \n",
+      "dtypes: float64(6), int64(2), object(5)\n",
+      "memory usage: 3.8+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate over the games\n",
+    "games.info()\n",
     "for title, row in games.iterrows():\n",
     "    # Create gameID from its title\n",
     "    gameID = createGameID(title)\n",
@@ -210,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 116,
    "outputs": [
     {
      "name": "stdout",
