rdf creator update with genres and platforms

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -26,13 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "outputs": [],
    "source": [
     "# Imports\n",
     "import os\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
+    "from datetime import datetime\n",
     "\n",
     "# Load the required libraries\n",
     "from rdflib import Graph, Literal, RDF, URIRef, Namespace\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -65,6 +66,8 @@
     "gamesPath = os.path.join(datasetsPath, \"games_cleaned.csv\")\n",
     "vgchartzPath = os.path.join(datasetsPath, \"vgchartz_cleaned.csv\")\n",
     "indiegamesdevelopersPath = os.path.join(datasetsPath, \"indiegamesdevelopers_cleaned_seriesExplode.csv\")\n",
+    "platformsPath = os.path.join(datasetsPath,\"platforms.csv\" )\n",
+    "\n",
     "\n",
     "\n",
     "# Countries-Regions path\n",
@@ -73,7 +76,8 @@
     "# Setup Turtle paths\n",
     "genresTTLPath = os.path.join(rdfPath, \"genres.ttl\")\n",
     "gamesTTLPath = os.path.join(rdfPath, \"games.ttl\")\n",
-    "companyTTLPath = os.path.join(rdfPath, \"company.ttl\")"
+    "companyTTLPath = os.path.join(rdfPath, \"company.ttl\")\n",
+    "platformsTTLPath = os.path.join(rdfPath, \"platforms.ttl\")\n"
    ],
    "metadata": {
     "id": "LrSYA9LWmzfq"
@@ -81,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -96,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -151,13 +155,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
     "games = pd.read_csv(gamesPath, sep=\",\", index_col=\"title\")\n",
     "vgchartz = pd.read_csv(vgchartzPath, sep=\",\", index_col=\"title\")\n",
-    "indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\", index_col=\"title\")"
+    "#indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\", index_col=\"title\") Borowei\n"
    ],
    "metadata": {
     "id": "GbAhlEJrmzfs"
@@ -165,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "outputs": [],
    "source": [
     "def createGameID(title):\n",
@@ -187,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "outputs": [
     {
      "name": "stdout",
@@ -249,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "outputs": [
     {
      "name": "stdout",
@@ -284,6 +288,148 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 124,
+   "outputs": [],
+   "source": [
+    "# Create Graph\n",
+    "g = createGraph()\n",
+    "# Load the CSV files in memory\n",
+    "genres = pd.read_csv(gamesPath, sep=\",\", index_col=\"genres\")\n",
+    "\n",
+    "def setGenreID(genre):\n",
+    "    genre = str(genre).replace(\"/\",\", \").replace(\"nan\",\"\")\n",
+    "    genre=genre.split(\", \")\n",
+    "    list=[]\n",
+    "    for i in range(len(genre)):\n",
+    "        list.append([])\n",
+    "        list[i].append(genre[i])\n",
+    "        list[i].append(genre[i].lower().replace(\"'\",\"\").replace(\" \", \"-\"))\n",
+    "    return(list)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "outputs": [],
+   "source": [
+    "for genre, row in genres.iterrows():\n",
+    "    allGenres = setGenreID(genre)\n",
+    "    for iterator in allGenres:\n",
+    "        if not (iterator[0] == \" \" or iterator[0] == \"\"):\n",
+    "            Genre = URIRef(HLTB[iterator[1]])\n",
+    "            #Add triples using store's add() method.\n",
+    "            g.add((Genre, RDF.type, HLTB.Genre))\n",
+    "            # Add the name of the genre\n",
+    "            g.add((Genre, HLTB[\"name\"], Literal(iterator[0], datatype=XSD.string)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "outputs": [],
+   "source": [
+    "# Save genre data in the Turtle format\n",
+    "with open(genresTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
+    "    fp.write(g.serialize(format=\"turtle\"))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Platforms"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "outputs": [],
+   "source": [
+    "# Create Graph\n",
+    "g = createGraph()\n",
+    "# Load the CSV files in memory\n",
+    "platforms = pd.read_csv(platformsPath, sep=\",\", index_col=\"Platform\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "outputs": [],
+   "source": [
+    "def setPlatformID(platform):\n",
+    "    return(platform.lower().replace(\" \", \"-\"))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "outputs": [],
+   "source": [
+    "for platform, row in platforms.iterrows():\n",
+    "    Platform = URIRef(HLTB[setPlatformID(platform)])\n",
+    "    #Add triples using store's add() method.\n",
+    "    g.add((Platform, RDF.type, HLTB.Platform))\n",
+    "    # Add the name of the genre\n",
+    "    g.add((Platform, HLTB[\"name\"], Literal(platform, datatype=XSD.string)))\n",
+    "\n",
+    "    #Add popularity if platform is popular\n",
+    "    if(row[\"Popular\"] == True):\n",
+    "        g.add((Platform, HLTB[\"popular\"], Literal(True, datatype=XSD.boolean)))\n",
+    "\n",
+    "    #Add release date if present\n",
+    "    if pd.notna(row[\"Release date\"]):\n",
+    "        time = datetime.combine(datetime.strptime(row[\"Release date\"], '%Y-%M-%d'), datetime.min.time())\n",
+    "        g.add((Platform, HLTB[\"releaseDate\"], Literal(time,datatype=XSD.dateTime)))\n",
+    "\n",
+    "    #Add CPU information\n",
+    "    if pd.notna(row[\"CPU\"]):\n",
+    "        g.add((Platform, HLTB[\"cpu\"], Literal(row[\"CPU\"],datatype=XSD.string)))\n",
+    "\n",
+    "    #Add CPU bit information\n",
+    "    if pd.notna(row[\"\\\"Bits\\\"\"]):\n",
+    "        bits = row[\"\\\"Bits\\\"\"].split(\"-\")[0]\n",
+    "        g.add((Platform, HLTB[\"bits\"], Literal(bits,datatype=XSD.int)))\n",
+    "\n",
+    "    #Add acronym information\n",
+    "    if pd.notna(row[\"Acronym\"]):\n",
+    "        g.add((Platform, HLTB[\"acronym\"], Literal(row[\"Acronym\"],datatype=XSD.string)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "outputs": [],
+   "source": [
+    "# Save data in the Turtle format\n",
+    "with open(platformsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
+    "    fp.write(g.serialize(format=\"turtle\"))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "Company"
@@ -294,12 +440,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 131,
+   "outputs": [],
+   "source": [
+    "# Create Graph\n",
+    "g = createGraph()\n",
+    "# Load the CSV files in memory\n",
+    "indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "source": [
     "#replace space with -, lower case\n",
     "indiegamesdevelopers['companyID'] = indiegamesdevelopers['Developer'].replace(' ', '-', regex=True).str.lower()\n",
     "\n",
     "\n",
-    "indiegamesdevelopers.info()\n",
+    "#indiegamesdevelopers.info()\n",
     "for index, row in indiegamesdevelopers.iterrows():\n",
     "  # Create the node to add to the Graph\n",
     "  Company = URIRef(HLTB[row['companyID']])\n",
@@ -313,7 +473,7 @@
    "metadata": {
     "id": "Rve2i1VonFv7"
    },
-   "execution_count": null,
+   "execution_count": 132,
    "outputs": []
   },
   {
@@ -328,8 +488,16 @@
    "metadata": {
     "id": "dbKlh6J9ozNy"
    },
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 133,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved company TTL file.\n"
+     ]
+    }
+   ]
   }
  ],
  "metadata": {
