--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -151,13 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
     "games = pd.read_csv(gamesPath, sep=\",\", index_col=\"title\")\n",
     "vgchartz = pd.read_csv(vgchartzPath, sep=\",\", index_col=\"title\")\n",
-    "indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\", index_col=\"title\")"
+    "indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\")"
    ],
    "metadata": {
     "id": "GbAhlEJrmzfs"
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "def createGameID(title):\n",
@@ -187,38 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 35922 entries, 688(I) Hunter/Killer to Yooka-Laylee and the Impossible Lair\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   Unnamed: 0        35922 non-null  int64  \n",
-      " 1   id                35922 non-null  int64  \n",
-      " 2   main_story        17324 non-null  float64\n",
-      " 3   main_plus_extras  11631 non-null  float64\n",
-      " 4   completionist     13107 non-null  float64\n",
-      " 5   all_styles        21112 non-null  float64\n",
-      " 6   coop              183 non-null    float64\n",
-      " 7   versus            274 non-null    float64\n",
-      " 8   type              1314 non-null   object \n",
-      " 9   developers        34080 non-null  object \n",
-      " 10  publishers        32754 non-null  object \n",
-      " 11  platforms         24285 non-null  object \n",
-      " 12  genres            32843 non-null  object \n",
-      "dtypes: float64(6), int64(2), object(5)\n",
-      "memory usage: 3.8+ MB\n"
-     ]
-    }
-   ],
+   "execution_count": 56,
+   "outputs": [],
    "source": [
     "# Iterate over the games\n",
-    "games.info()\n",
     "for title, row in games.iterrows():\n",
     "    # Create gameID from its title\n",
     "    gameID = createGameID(title)\n",
@@ -230,7 +202,10 @@
     "    g.add((Game, RDF.type, HLTB.Game))\n",
     "\n",
     "    # Add the title of the game\n",
-    "    g.add((Game, HLTB[\"title\"], Literal(title, datatype=XSD.string)))"
+    "    g.add((Game, HLTB[\"title\"], Literal(title, datatype=XSD.string)))\n",
+    "\n",
+    "    # Add multiplayer focus\n",
+    "    g.add((Game, HLTB[\"multiplayerFocus\"], Literal(pd.notnull(row[\"coop\"]) or pd.notnull(row[\"versus\"]), datatype=XSD.boolean)))"
    ],
    "metadata": {
     "id": "StEB0eTJmzfs",
@@ -249,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "outputs": [
     {
      "name": "stdout",
@@ -313,8 +288,28 @@
    "metadata": {
     "id": "Rve2i1VonFv7"
    },
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 58,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 446 entries, 0 to 445\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                  Non-Null Count  Dtype \n",
+      "---  ------                  --------------  ----- \n",
+      " 0   Unnamed: 0              446 non-null    int64 \n",
+      " 1   Developer               446 non-null    object\n",
+      " 2   Country                 446 non-null    object\n",
+      " 3   Notable games           446 non-null    object\n",
+      " 4   selected_titles_series  404 non-null    object\n",
+      " 5   companyID               446 non-null    object\n",
+      "dtypes: int64(1), object(5)\n",
+      "memory usage: 21.0+ KB\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
@@ -328,8 +323,17 @@
    "metadata": {
     "id": "dbKlh6J9ozNy"
    },
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 59,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved company TTL file.\n",
+      "Saved company TTL file.\n"
+     ]
+    }
+   ]
   }
  ],
  "metadata": {
