--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "outputs": [],
    "source": [
     "def createGameID(title):\n",
@@ -191,8 +191,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 67,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 35922 entries, 688(I) Hunter/Killer to Yooka-Laylee and the Impossible Lair\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Unnamed: 0        35922 non-null  int64  \n",
+      " 1   id                35922 non-null  int64  \n",
+      " 2   main_story        17324 non-null  float64\n",
+      " 3   main_plus_extras  11631 non-null  float64\n",
+      " 4   completionist     13107 non-null  float64\n",
+      " 5   all_styles        21112 non-null  float64\n",
+      " 6   coop              183 non-null    float64\n",
+      " 7   versus            274 non-null    float64\n",
+      " 8   type              1314 non-null   object \n",
+      " 9   developers        34080 non-null  object \n",
+      " 10  publishers        32754 non-null  object \n",
+      " 11  platforms         24285 non-null  object \n",
+      " 12  genres            32843 non-null  object \n",
+      "dtypes: float64(6), int64(2), object(5)\n",
+      "memory usage: 3.8+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate over the games\n",
     "games.info()\n",
@@ -228,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "outputs": [
     {
      "name": "stdout",
@@ -264,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -288,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -307,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -329,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -343,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "def setPlatformID(platform):\n",
@@ -355,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "for platform, row in platforms.iterrows():\n",
@@ -393,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -415,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -429,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
@@ -444,7 +471,7 @@
     "  # Add triples using store's add() method.\n",
     "  g.add((Company, RDF.type, HLTB.Company))\n",
     "\n",
-    "  # Add the the Company\n",
+    "  # Add the Company\n",
     "  g.add((Company, HLTB[\"Company\"], Literal(row['Developer'], datatype=XSD.string)))\n"
    ],
    "metadata": {
@@ -463,13 +490,12 @@
    "metadata": {
     "id": "dbKlh6J9ozNy"
    },
-   "execution_count": 59,
+   "execution_count": 78,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved company TTL file.\n",
       "Saved company TTL file.\n"
      ]
     }
