--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -2,31 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "id": "KTj_MOZOmzfn"
+   },
    "source": [
     "# HowLongToBeat RDF Creator\n",
     "\n",
     "We load the generated CSV files and we serialize all the data into ***turtle format  (TTL)*** relying on ***RDFLib*** Python library."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "id": "KTj_MOZOmzfn"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "id": "GPtFAXlZmzfp"
+   },
    "source": [
     "## Setup\n",
     "\n",
     "We import all the necessary libraries and we set the paths to the input/output files. In particular, we create a TTL file for each type of data."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "id": "GPtFAXlZmzfp"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
+   "metadata": {
+    "id": "JXZwhL0Bmzfp"
+   },
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -40,18 +43,19 @@
     "\n",
     "# RDFLib knows about some namespaces, like XSD\n",
     "from rdflib.namespace import XSD"
-   ],
-   "metadata": {
-    "id": "JXZwhL0Bmzfp"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
+   "metadata": {
+    "id": "LrSYA9LWmzfq"
+   },
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
     "datasetsPath = os.path.join(absPath, \"cleaned_datasets\")\n",
+    "rawdatasetsPath = os.path.join(absPath, \"raw_datasets\")\n",
     "rdfPath = os.path.join(absPath, \"rdf\")\n",
     "\n",
     "# Create dataset directory if not exists\n",
@@ -67,8 +71,7 @@
     "vgchartzPath = os.path.join(datasetsPath, \"vgchartz_cleaned.csv\")\n",
     "indiegamesdevelopersPath = os.path.join(datasetsPath, \"indiegamesdevelopers_cleaned_seriesExplode.csv\")\n",
     "platformsPath = os.path.join(datasetsPath,\"platforms.csv\" )\n",
-    "\n",
-    "\n",
+    "videoGameDevelopersPath = os.path.join(datasetsPath, \"videogamesdevelopers_cleaned_seriesexplode.csv\" )\n",
     "\n",
     "# Countries-Regions path\n",
     "countriesRegionsPath = os.path.join(datasetsPath, \"countries-regions.csv\")\n",
@@ -77,15 +80,16 @@
     "genresTTLPath = os.path.join(rdfPath, \"genres.ttl\")\n",
     "gamesTTLPath = os.path.join(rdfPath, \"games.ttl\")\n",
     "companyTTLPath = os.path.join(rdfPath, \"company.ttl\")\n",
-    "platformsTTLPath = os.path.join(rdfPath, \"platforms.ttl\")\n"
-   ],
-   "metadata": {
-    "id": "LrSYA9LWmzfq"
-   }
+    "platformsTTLPath = os.path.join(rdfPath, \"platforms.ttl\")\n",
+    "videoGameDevelopersTTLPath = os.path.join(rdfPath, \"videoGameDevelopers.ttl\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
+   "metadata": {
+    "id": "rOveR-Rrmzfr"
+   },
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -93,14 +97,14 @@
     "\n",
     "# HLTB Ontology\n",
     "HLTB = Namespace(\"http://www.semanticweb.org/enrico/ontologies/2022/10/HLTB-db2unipd#\")"
-   ],
-   "metadata": {
-    "id": "rOveR-Rrmzfr"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
+   "metadata": {
+    "id": "VbjlMp7fmzfr"
+   },
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -113,13 +117,14 @@
     "    g.bind(\"hltb\", HLTB)\n",
     "\n",
     "    return g"
-   ],
-   "metadata": {
-    "id": "VbjlMp7fmzfr"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "id": "WJv6ArAbmzfr"
+   },
    "source": [
     "## Serialization\n",
     "\n",
@@ -135,41 +140,40 @@
     "### Games\n",
     "\n",
     "Now serializing the Game class"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "id": "WJv6ArAbmzfr"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
+   "metadata": {
+    "id": "QmQMPeKimzfr"
+   },
    "outputs": [],
    "source": [
     "# Create Graph\n",
     "g = createGraph()"
-   ],
-   "metadata": {
-    "id": "QmQMPeKimzfr"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
     "games = pd.read_csv(gamesPath, sep=\",\", index_col=\"title\")\n",
     "vgchartz = pd.read_csv(vgchartzPath, sep=\",\", index_col=\"title\")\n",
     "#indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\", index_col=\"title\") Borowei\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def createGameID(title):\n",
@@ -184,14 +188,14 @@
     "        gameID = gameID[:-1]\n",
     "    #print(gameID.lower())\n",
     "    return gameID.lower()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -238,24 +242,25 @@
     "\n",
     "    # Add multiplayer focus\n",
     "    g.add((Game, HLTB[\"multiplayerFocus\"], Literal(pd.notnull(row[\"coop\"]) or pd.notnull(row[\"versus\"]), datatype=XSD.boolean)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Missing all other data about games"
-   ],
    "metadata": {
     "collapsed": false,
     "id": "O4OpE1JNmzft"
-   }
+   },
+   "source": [
+    "## Missing all other data about games"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
+   "metadata": {
+    "id": "BpR7w_vVmzft",
+    "outputId": "4065b697-c57a-4aee-f351-45ece195b6b0"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -271,27 +276,26 @@
     "    fp.write(g.serialize(format=\"turtle\"))\n",
     "\n",
     "print(\"Saved games TTL file.\")"
-   ],
-   "metadata": {
-    "id": "BpR7w_vVmzft",
-    "outputId": "4065b697-c57a-4aee-f351-45ece195b6b0"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "id": "Xq17uGMEmzft"
+   },
    "source": [
     "### Genre\n",
     "\n",
     "Now serializing the Genre class"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "id": "Xq17uGMEmzft"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -308,14 +312,14 @@
     "        list[i].append(genre[i])\n",
     "        list[i].append(genre[i].lower().replace(\"'\",\"\").replace(\" \", \"-\"))\n",
     "    return(list)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -327,62 +331,62 @@
     "            g.add((Genre, RDF.type, HLTB.Genre))\n",
     "            # Add the name of the genre\n",
     "            g.add((Genre, HLTB[\"name\"], Literal(iterator[0], datatype=XSD.string)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
     "with open(genresTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Platforms"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Platforms"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Create Graph\n",
     "g = createGraph()\n",
     "# Load the CSV files in memory\n",
     "platforms = pd.read_csv(platformsPath, sep=\",\", index_col=\"Platform\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def setPlatformID(platform):\n",
     "    return(platform.lower().replace(\" \", \"-\"))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "for platform, row in platforms.iterrows():\n",
@@ -413,50 +417,50 @@
     "    #Add acronym information\n",
     "    if pd.notna(row[\"Acronym\"]):\n",
     "        g.add((Platform, HLTB[\"acronym\"], Literal(row[\"Acronym\"],datatype=XSD.string)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
     "with open(platformsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Company"
-   ],
    "metadata": {
     "id": "BVPWWFGcnDbO"
-   }
+   },
+   "source": [
+    "Company"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Create Graph\n",
     "g = createGraph()\n",
     "# Load the CSV files in memory\n",
     "indiegamesdevelopers = pd.read_csv(indiegamesdevelopersPath, sep=\",\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
@@ -472,25 +476,51 @@
     "  g.add((Company, RDF.type, HLTB.Company))\n",
     "\n",
     "  # Add the Company\n",
-    "  g.add((Company, HLTB[\"Company\"], Literal(row['Developer'], datatype=XSD.string)))\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "  g.add((Company, HLTB['officialName'], Literal(row['Developer'], datatype=XSD.string)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "video-game-evelopers"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Save the data in the Turtle format\n",
-    "with open(companyTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
-    "    fp.write(g.serialize(format=\"turtle\"))\n",
+    "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#replace space with -, lower case\n",
+    "videoGameDevelopers['companyID'] = videoGameDevelopers['Developer'].replace(' ', '-', regex=True).str.lower()\n",
     "\n",
-    "print(\"Saved company TTL file.\")"
-   ],
-   "metadata": {
-    "id": "dbKlh6J9ozNy"
-   },
-   "execution_count": 78,
+    "\n",
+    "#indiegamesdevelopers.info()\n",
+    "for index, row in videoGameDevelopers.iterrows():\n",
+    "  # Create the node to add to the Graph\n",
+    "  Company = URIRef(HLTB[row['companyID']])\n",
+    "\n",
+    "  # Add triples using store's add() method.\n",
+    "  g.add((Company, RDF.type, HLTB.Company))\n",
+    "\n",
+    "  # Add the Company\n",
+    "  g.add((Company, HLTB[\"indieDeveloper\"], Literal(row['Developer'], datatype=XSD.boolean)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -499,29 +529,48 @@
       "Saved company TTL file.\n"
      ]
     }
+   ],
+   "source": [
+    "# Save the data in the Turtle format\n",
+    "with open(companyTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
+    "    fp.write(g.serialize(format=\"turtle\"))\n",
+    "\n",
+    "print(\"Saved company TTL file.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
-  "colab": {
-   "provenance": []
+  "vscode": {
+   "interpreter": {
+    "hash": "38cca0c38332a56087b24af0bc80247f4fced29cb4f7f437d91dc159adec9c4e"
+   }
   }
  },
  "nbformat": 4,
