update game and ontology

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 208,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 209,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 210,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -95,12 +95,12 @@
     "HLTB = Namespace(\"http://www.semanticweb.org/enrico/ontologies/2022/10/HLTB-db2unipd#\")"
    ],
    "metadata": {
-    "id": "rOveR-Rrmzfr"
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 211,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -115,7 +115,44 @@
     "    return g"
    ],
    "metadata": {
-    "id": "VbjlMp7fmzfr"
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "outputs": [],
+   "source": [
+    "#create game URI\n",
+    "def createGameID(title):\n",
+    "    # Replace all special chars with \"-\"\n",
+    "    gameID = \"\"\n",
+    "    for char in title:\n",
+    "        if char.isalnum():\n",
+    "            gameID += char\n",
+    "        elif len(gameID) > 0 and gameID[-1] != '-':\n",
+    "            gameID += '-'\n",
+    "    if len(gameID) > 0 and gameID[-1] == '-':\n",
+    "        gameID = gameID[:-1]\n",
+    "    #print(gameID.lower())\n",
+    "    return gameID.lower()\n",
+    "\n",
+    "#Create genre URI\n",
+    "def setGenreID(genre): ##first half is the original genres, second half are processed and lowercase\n",
+    "    genre = str(genre).replace(\"/\",\", \").replace(\"nan\",\"\")\n",
+    "    genre=genre.split(\", \")\n",
+    "    list=[]\n",
+    "    for i in range(len(genre)):\n",
+    "        list.append([])\n",
+    "        list[i].append(genre[i])\n",
+    "        list[i].append(genre[i].lower().replace(\"'\",\"\").replace(\" \", \"-\"))\n",
+    "    return(list)\n",
+    "\n",
+    "def setPlatformID(platform):\n",
+    "    return(platform.lower().replace(\" \", \"-\"))"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -137,25 +174,24 @@
     "Now serializing the Game class"
    ],
    "metadata": {
-    "collapsed": false,
-    "id": "WJv6ArAbmzfr"
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 247,
    "outputs": [],
    "source": [
     "# Create Graph\n",
     "g = createGraph()"
    ],
    "metadata": {
-    "id": "QmQMPeKimzfr"
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 248,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -169,29 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "outputs": [],
-   "source": [
-    "def createGameID(title):\n",
-    "    # Replace all special chars with \"-\"\n",
-    "    gameID = \"\"\n",
-    "    for char in title:\n",
-    "        if char.isalnum():\n",
-    "            gameID += char\n",
-    "        elif len(gameID) > 0 and gameID[-1] != '-':\n",
-    "            gameID += '-'\n",
-    "    if len(gameID) > 0 and gameID[-1] == '-':\n",
-    "        gameID = gameID[:-1]\n",
-    "    #print(gameID.lower())\n",
-    "    return gameID.lower()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 249,
    "outputs": [
     {
      "name": "stdout",
@@ -234,10 +248,23 @@
     "    g.add((Game, RDF.type, HLTB.Game))\n",
     "\n",
     "    # Add the title of the game\n",
-    "    g.add((Game, HLTB[\"title\"], Literal(title, datatype=XSD.string)))\n",
+    "    g.add((Game, HLTB[\"officialName\"], Literal(title, datatype=XSD.string)))\n",
     "\n",
     "    # Add multiplayer focus\n",
-    "    g.add((Game, HLTB[\"multiplayerFocus\"], Literal(pd.notnull(row[\"coop\"]) or pd.notnull(row[\"versus\"]), datatype=XSD.boolean)))"
+    "    g.add((Game, HLTB[\"multiplayerFocus\"], Literal(pd.notnull(row[\"coop\"]) or pd.notnull(row[\"versus\"]), datatype=XSD.boolean)))\n",
+    "\n",
+    "    #Add hltb id\n",
+    "    g.add((Game, HLTB[\"id\"], Literal(row[\"id\"], datatype=XSD.int)))\n",
+    "\n",
+    "    #Add hasGenre object property\n",
+    "    for genreList in setGenreID(row[\"genres\"]):\n",
+    "        for genre in genreList[:len(genreList)//2]:\n",
+    "            g.add((Game, HLTB[\"hasGenre\"], Literal(genre, datatype=XSD.string)))\n",
+    "\n",
+    "    #Add platform availability\n",
+    "    if pd.notna(row[\"platforms\"]):\n",
+    "        for platform in row[\"platforms\"].split(\", \"):\n",
+    "            g.add((Game, HLTB[\"releasedOn\"], Literal(setPlatformID(platform), datatype=XSD.string )))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -245,9 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Missing all other data about games"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "id": "O4OpE1JNmzft"
@@ -255,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 250,
    "outputs": [
     {
      "name": "stdout",
@@ -291,23 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 217,
    "outputs": [],
    "source": [
     "# Create Graph\n",
     "g = createGraph()\n",
     "# Load the CSV files in memory\n",
     "genres = pd.read_csv(gamesPath, sep=\",\", index_col=\"genres\")\n",
-    "\n",
-    "def setGenreID(genre):\n",
-    "    genre = str(genre).replace(\"/\",\", \").replace(\"nan\",\"\")\n",
-    "    genre=genre.split(\", \")\n",
-    "    list=[]\n",
-    "    for i in range(len(genre)):\n",
-    "        list.append([])\n",
-    "        list[i].append(genre[i])\n",
-    "        list[i].append(genre[i].lower().replace(\"'\",\"\").replace(\" \", \"-\"))\n",
-    "    return(list)"
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -315,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 218,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -334,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 219,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -356,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 220,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -370,19 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 221,
    "outputs": [],
-   "source": [
-    "def setPlatformID(platform):\n",
-    "    return(platform.lower().replace(\" \", \"-\"))"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 222,
    "outputs": [],
    "source": [
     "for platform, row in platforms.iterrows():\n",
@@ -420,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 223,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -442,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 224,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -456,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 225,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
@@ -490,7 +503,7 @@
    "metadata": {
     "id": "dbKlh6J9ozNy"
    },
-   "execution_count": 78,
+   "execution_count": 226,
    "outputs": [
     {
      "name": "stdout",
