--- a/Platforms.ipynb
+++ b/Platforms.ipynb
@@ -8,6 +8,8 @@
     "* 'platforms_wikipedia.csv': table from **https://en.wikipedia.org/wiki/Home_video_game_console#Released_systems**\n",
     "* 'console_sales_vgchartz.csv': table from **https://www.vgchartz.com/charts/platform_totals/Hardware.php/**\n",
     "\n",
+    "These are the same platforms used in 'games.csv' and 'games_cleaned.csv'\n",
+    "\n",
     "HowLongToBeat website is the main source of data. We tried to match data from the other sources based on the platform name.\n"
    ],
    "metadata": {
