--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 308,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 309,
    "outputs": [],
    "source": [
     "absPath = str(Path(os.path.abspath(os.getcwd())).absolute())\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 310,
    "outputs": [],
    "source": [
     "# Country Ontology\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 311,
    "outputs": [],
    "source": [
     "def createGraph():\n",
@@ -113,7 +113,38 @@
     "    g.bind(\"countries\", CNS)\n",
     "    g.bind(\"hltb\", HLTB)\n",
     "\n",
-    "    return g"
+    "    return g\n",
+    "\n",
+    "#create game URI\n",
+    "def createGameID(title):\n",
+    "    # Replace all special chars with \"-\"\n",
+    "    gameID = \"\"\n",
+    "    for char in title:\n",
+    "        if char.isalnum():\n",
+    "            gameID += char\n",
+    "        elif len(gameID) > 0 and gameID[-1] != '-':\n",
+    "            gameID += '-'\n",
+    "    if len(gameID) > 0 and gameID[-1] == '-':\n",
+    "        gameID = gameID[:-1]\n",
+    "    #print(gameID.lower())\n",
+    "    return gameID.lower()\n",
+    "\n",
+    "#Create genre URI\n",
+    "def setGenreID(genre): ##first half is the original genres, second half are processed and lowercase\n",
+    "    genre = str(genre).replace(\"/\",\", \").replace(\"nan\",\"\")\n",
+    "    genre=genre.split(\", \")\n",
+    "    list=[]\n",
+    "    for i in range(len(genre)):\n",
+    "        list.append([])\n",
+    "        list[i].append(genre[i])\n",
+    "        list[i].append(genre[i].lower().replace(\"'\",\"\").replace(\" \", \"-\"))\n",
+    "    return(list)\n",
+    "\n",
+    "def setPlatformID(platform):\n",
+    "    return(platform.lower().replace(\" \", \"-\"))\n",
+    "\n",
+    "def setDeveloperID(developer):\n",
+    "    return developer.replace(' ', '-', regex=True).str.lower()"
    ],
    "metadata": {
     "collapsed": false
@@ -143,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 312,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -155,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 313,
    "outputs": [],
    "source": [
     "# Load the CSV files in memory\n",
@@ -169,30 +200,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 313,
    "outputs": [],
-   "source": [
-    "def createGameID(title):\n",
-    "    # Replace all special chars with \"-\"\n",
-    "    gameID = \"\"\n",
-    "    for char in title:\n",
-    "        if char.isalnum():\n",
-    "            gameID += char\n",
-    "        elif len(gameID) > 0 and gameID[-1] != '-':\n",
-    "            gameID += '-'\n",
-    "    if len(gameID) > 0 and gameID[-1] == '-':\n",
-    "        gameID = gameID[:-1]\n",
-    "    #print(gameID.lower())\n",
-    "    return gameID.lower()"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 314,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 35922 entries, 688(I) Hunter/Killer to Yooka-Laylee and the Impossible Lair\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Unnamed: 0        35922 non-null  int64  \n",
+      " 1   id                35922 non-null  int64  \n",
+      " 2   main_story        17324 non-null  float64\n",
+      " 3   main_plus_extras  11631 non-null  float64\n",
+      " 4   completionist     13107 non-null  float64\n",
+      " 5   all_styles        21112 non-null  float64\n",
+      " 6   coop              183 non-null    float64\n",
+      " 7   versus            274 non-null    float64\n",
+      " 8   type              1314 non-null   object \n",
+      " 9   developers        34080 non-null  object \n",
+      " 10  publishers        32754 non-null  object \n",
+      " 11  platforms         24285 non-null  object \n",
+      " 12  genres            32843 non-null  object \n",
+      "dtypes: float64(6), int64(2), object(5)\n",
+      "memory usage: 3.8+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate over the games\n",
     "games.info()\n",
@@ -238,8 +283,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 315,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved games TTL file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data in the Turtle format\n",
     "with open(gamesTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
@@ -264,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 316,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -279,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 317,
    "outputs": [],
    "source": [
     "for genre, row in genres.iterrows():\n",
@@ -298,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 318,
    "outputs": [],
    "source": [
     "# Save genre data in the Turtle format\n",
@@ -320,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 319,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -334,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 319,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -343,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 320,
    "outputs": [],
    "source": [
     "for platform, row in platforms.iterrows():\n",
@@ -381,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 321,
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
@@ -403,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 322,
    "outputs": [],
    "source": [
     "# Create Graph\n",
@@ -417,11 +470,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 323,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
-    "indiegamesdevelopers['companyID'] = indiegamesdevelopers['Developer'].replace(' ', '-', regex=True).str.lower()\n",
+    "indiegamesdevelopers['companyID'] = setDeveloperID(indiegamesdevelopers['Developer'])\n",
     "\n",
     "\n",
     "#indiegamesdevelopers.info()\n",
@@ -450,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 324,
    "outputs": [],
    "source": [
     "videoGameDevelopers = pd.read_csv(videoGameDevelopersPath, sep=\",\")"
@@ -461,11 +514,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 325,
    "outputs": [],
    "source": [
     "#replace space with -, lower case\n",
-    "videoGameDevelopers['companyID'] = videoGameDevelopers['Developer'].replace(' ', '-', regex=True).str.lower()\n",
+    "videoGameDevelopers['companyID'] = setDeveloperID(videoGameDevelopers['Developer'])\n",
     "\n",
     "\n",
     "#indiegamesdevelopers.info()\n",
@@ -477,7 +530,7 @@
     "  g.add((Company, RDF.type, HLTB.Company))\n",
     "\n",
     "  # Add the Company\n",
-    "  g.add((Company, HLTB[\"indieDeveloper\"], Literal(row['Developer'], datatype=XSD.boolean)))\n"
+    "  g.add((Company, HLTB[\"indieDeveloper\"], Literal(pd.notnull(row['Developer']), datatype=XSD.boolean)))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -495,7 +548,7 @@
    "metadata": {
     "id": "dbKlh6J9ozNy"
    },
-   "execution_count": 226,
+   "execution_count": 326,
    "outputs": [
     {
      "name": "stdout",
